--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ h1, h2, h3 {
   font-family: "Source Serif 4", serif;
   font-weight: 600;
   letter-spacing: -0.5px;
+   line-height: 1.15;
+letter-spacing: -1px;
+
 }
 
 .container {
